Removing redundant aspects